--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "node": "^21.1.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "open": "^8.2.1"
   }
 }
