--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "crypto-random-string": "^3.1.0",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
-    "node": "^21.1.0",
+    "node": "^21.2.0",
     "nodemon": "^3.0.1",
     "open": "^8.2.1"
   }
